# webctl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  webctl.example.toml  webctl.toml
src/: HTTPClient.cpp  HTTPClient.h  HTTPServer.cpp  HTTPServer.h  JwksProvider.cpp  JwksProvider.h  OIDCProvider.cpp  OIDCProvider.h  RestProvider.h  main.cpp  overload.h  sdbus_json.h
